fix alignment of nav buttons

--- a/style.less
+++ b/style.less
@@ -316,7 +316,7 @@
 			margin-left: -10px;
 			padding-left: 10px;
 			.stac--actions {
-				padding-left: calc(3em / 0.75);
+				width: calc(12.5em + 3em / 0.75);
 			}
 		}
 		.stac--details {
@@ -338,7 +338,7 @@
 				font-size: 0.75em;
 				opacity: 0.5;
 			}
-			.stac--actions, .stac--nav {
+			.stac--nav, .stac--actions {
 				font-size: 0.75em;
 				display: flex;
 				gap: 0.5em;
@@ -346,6 +346,10 @@
 			}
 			.stac--nav {
 				flex: 1 1 auto;
+				justify-content: end;
+			}
+			.stac--actions {
+				width: 12.5em;
 				justify-content: end;
 			}
 			.stac--info {
